@@ -28,6 +28,7 @@ jobs:
       # see https://www.pcre.org/original/changelog.txt
       PCRE_VERSION: 8.45
       QT_VERSION: 6.10.0
+      BOOST_MINOR_VERSION: 89
 
     steps:
       - uses: actions/checkout@v4
@@ -52,6 +53,16 @@ jobs:
           copy pcre.h ..\externals || exit /b !errorlevel!
           copy Release\pcre.lib ..\externals\pcre64.lib || exit /b !errorlevel!
 
+      - name: Download Boost
+        run: |
+          curl -fsSL https://archives.boost.io/release/1.%BOOST_MINOR_VERSION%.0/source/boost_1_%BOOST_MINOR_VERSION%_0.7z -o boost.zip || exit /b !errorlevel!
+
+      - name: Install Boost
+        run: |
+          @echo on
+          7z x boost.zip boost_1_%BOOST_MINOR_VERSION%_0/boost || exit /b !errorlevel!
+          ren boost_1_%BOOST_MINOR_VERSION%_0 boost || exit /b !errorlevel!
+
       # available modules: https://github.com/miurahr/aqtinstall/blob/master/docs/getting_started.rst#installing-modules
       # available tools:   https://github.com/miurahr/aqtinstall/blob/master/docs/getting_started.rst#installing-tools
       - name: Install Qt ${{ env.QT_VERSION }}
@@ -68,7 +79,7 @@ jobs:
         run: |
           :: TODO: enable rules?
           :: specify Release build so matchcompiler is used
-          cmake -S . -B build -DCMAKE_BUILD_TYPE=Release -DBUILD_GUI=On -DWITH_QCHART=On -DBUILD_ONLINE_HELP=On -DCMAKE_COMPILE_WARNING_AS_ERROR=On || exit /b !errorlevel!
+          cmake -S . -B build -DCMAKE_BUILD_TYPE=Release -DBUILD_GUI=On -DWITH_QCHART=On -DBUILD_ONLINE_HELP=On -DUSE_BOOST=ON -DBOOST_INCLUDEDIR=%GITHUB_WORKSPACE%\boost -DCMAKE_COMPILE_WARNING_AS_ERROR=On || exit /b !errorlevel!
           cmake --build build --target cppcheck-gui --config Release || exit /b !errorlevel!
 
       # TODO: package PDBs
@@ -87,9 +98,8 @@ jobs:
         run: python tools\matchcompiler.py --write-dir lib || exit /b !errorlevel!
 
       # TODO: build with multiple threads
-      # TODO: build with boost enabled
       - name: Build CLI x64 release configuration using MSBuild
-        run: msbuild -m cppcheck.sln -t:cli -p:Configuration=Release-PCRE -p:Platform=x64 || exit /b !errorlevel!
+        run: msbuild -m cppcheck.sln -t:cli -p:Configuration=Release-PCRE -p:Platform=x64 -p:HaveBoost=HAVE_BOOST -p:BoostInclude=%GITHUB_WORKSPACE%\boost || exit /b !errorlevel!
 
       - uses: actions/upload-artifact@v4
         with:
