@@ -25,4 +25,5 @@ Other:
 - `CPPFLAGS` are not longer being passed to the linker command for `cppcheck` and `testrunner`.
 - Removed deprecated platforms `unix32-unsigned` and `unix64-unsigned`.
 - Updated Qt to 6.10.0 (official Windows release only).
+- The official Windows binary is now built against Boost 1.89 for increased performance.
 -
